2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement problem conversion.
	* build-aux/boost.m4,
	* configure.ac: Search for Boost.MPL.
	* include/Makefile.am: Add problem-converter to header list.
	* include/liboptimization/problem-converter.hh: New.
	* include/liboptimization/problem-converter.hxx: New.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Implement generic
        copy constructors.
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx: Convert problem if
        the providen one is not of the expected complexity.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Add script that uploads documentation to AIST server.
	* configure.ac: Generate the shell script.
	* doc/aist-upload.sh.in: New.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Normalize public interface.
	* include/liboptimization/generic-solver.hh,
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx,
	* include/liboptimization/solver-error.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx,
	* include/liboptimization/twice-derivable-function.hh,
	* src/cfsqp.cc,
	* src/doc.hh,
	* src/generic-solver.cc,
	* src/ipopt.cc,
	* tests/cfsqp.cc,
	* tests/ipopt.cc,
	* tests/simple-test.cc: Replace getXxx method by xxx.
        Replace struct by class.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement LinearFunction::hessian.
	* .gitignore: Ignore _build* directories (useful for cross-compiling).
	* include/liboptimization/derivable-function.hh,
	* include/liboptimization/fwd.hh,
	* include/liboptimization/ipopt.hh: Document, fix coding style.
	* include/liboptimization/linear-function.hh: Implement hessian.
	* include/liboptimization/problem.hh,
	* include/liboptimization/quadratic-function.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/twice-derivable-function.hh,
	* src/cfsqp.cc: Document, fix coding style.