@@ -67,7 +67,7 @@
 
    \f$min_{x \in \mathbb{R}^4} x_1 x_4 (x_1 + x_2 + x_3) + x_3\f$
 
-   \ldots with the following constraints:
+   with the following constraints:
 
    - \f$x_1 x_2 x_3 x_4 \geq 25\f$
    - \f$x_1^2 + x_2^2 + x_3^2 + x_4^2 = 40\f$
